# music-manager

music-manager-demo/: CMakeLists.txt
music-manager-demo/src/: MusicManager.cpp
music-manager-demo/src/include/: MusicManager.h
music-manager-demo/test/: CMakeLists.txt  MusicManagerTests.cpp
